# boomaga

./: .gitignore  .travis.yml  BOO_FORMAT.md  CMakeLists.txt  COPYING  INSTALL.txt  README.md
cups/: CMakeLists.txt  booklet  booklet.ppd  boomaga  boomaga.ppd  boomaga_pstopdf  boomagabackend  common.cpp  common.h  consolekit.h  envinfo.cpp  envinfo.h  inputfile.cpp  inputfile.h  main.cpp
cups/backend/: CMakeLists.txt  boomaga  boomaga.ppd  main.cpp
gui/: CMakeLists.txt  actions.h  boomagatypes.cpp  boomagatypes.h  dbus.cpp  dbus.h  icon.cpp  icon.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.boomaga.service  previewwidget.cpp  previewwidget.h  psrender.cpp  psrender.h  psview.cpp  psview.h  render.cpp  render.h  resource.qrc  settings.cpp  settings.h  widgets.cpp  widgets.h
gui/aboutdialog/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui
gui/cmake/: CreateDesktopFile.cmake  FindGhostscript.cmake  FindPoppler.cmake  Findsnappy.cmake
gui/configdialog/: configdialog.cpp  configdialog.h  configdialog.ui
gui/export/: exporttopdf.cpp  exporttopdf.h  exporttopdf.ui  exporttopdfprinter.cpp  exporttopdfprinter.h
gui/kernel/: boomagapoppler.cpp  boomagapoppler.h  cupsprinteroptions.cpp  cupsprinteroptions.h  grayscaleconverter.cpp  grayscaleconverter.h  inputfile.cpp  inputfile.h  job.cpp  job.h  layout.cpp  layout.h  page.cpp  page.h  printer.cpp  printer.h  project.cpp  project.h  projectfile.cpp  projectfile.h  projectpage.cpp  projectpage.h  psconstants.h  psengine.cpp  psengine.h  psfile.cpp  psfile.h  psproject.cpp  psproject.h  pssheet.cpp  pssheet.h  render.cpp  render.h  sheet.cpp  sheet.h  tmppdffile.cpp  tmppdffile.h
gui/misc/: boomaga.xml
gui/pdfmerger/: CMakeLists.txt  main.cpp  pdfmerger.cpp  pdfmerger.h  pdfmergeripc.cpp  pdfmergeripc.h  pdfprocessor.cpp  pdfprocessor.h
gui/pdfparser/: pdfdata.cpp  pdfdata.h  pdferrors.h  pdfobject.cpp  pdfobject.h  pdfreader.cpp  pdfreader.h  pdftypes.h  pdfvalue.cpp  pdfvalue.h  pdfvalue_p.h  pdfwriter.cpp  pdfwriter.h  pdfxref.cpp  pdfxref.h
gui/printdialog/: printdialog.cpp  printdialog.h  printdialog.ui
gui/printersettings/: printersettings.cpp  printersettings.h  printersettings.ui
gui/tests/: CMakeLists.txt  testboomaga.cpp  testboomaga.h  testpdfparser.cpp  testpdfreader.cpp  testpdfwriter.cpp  tools.h
gui/translations/: booklet_ru.ts  boomaga_cs.ts  boomaga_de.desktop  boomaga_de.ts  boomaga_el.desktop  boomaga_el.ts  boomaga_eu.ts  boomaga_fr.ts  boomaga_hu_HU.ts  boomaga_it.ts  boomaga_lt.desktop  boomaga_lt.ts  boomaga_nb_NO.ts  boomaga_nl_NL.desktop  boomaga_nl_NL.ts  boomaga_pl_PL.ts  boomaga_ro.ts  boomaga_ru.ts  boomaga_uk_UA.ts  boomaga_uz@Latn.ts  src.boomaga.ts  update.sh
gui/translations/translatorsinfo/: CMakeLists.txt  translators.info.src  translators_cs.info  translators_de.info  translators_el.info  translators_fr.info  translators_it.info  translators_lt.info  translators_nb_NO.info  translators_ru.info  translators_uk_UA.info  translators_uz@Latn.info  translatorsinfo.cpp
gui/widgets/: joblistview.cpp  joblistview.h  layoutradiobutton.cpp  pagelistview.cpp  pagelistview.h  previewwidget.cpp  previewwidget.h  printerscombobox.cpp  subbookletview.cpp  subbookletview.h
selinux/: CMakeLists.txt  boomaga.fc.in  boomaga.te.in
src/backend/: CMakeLists.txt
src/backend/cups_backend/: CMakeLists.txt  apple.postinstall.in  dbuslegacy.cpp  dbuslegacy.h  dbussessionbus.h  logging.cpp  logging.h  main.cpp
src/backend/dbus/: CMakeLists.txt  envinfo.cpp  systemd.cpp  systemd.h
src/backend/dbus/root/: CMakeLists.txt  main.cpp
src/backend/macos_agent/: CMakeLists.txt  main.cpp  plist.in
src/boomaga/: CMakeLists.txt  boofile.cpp  boofile.h  boomagatypes.cpp  boomagatypes.h  dbus.cpp  dbus.h  dbussessionbus.cpp  debug.h  finddbusaddress.cpp  finddbusaddress.h  main.cpp  render.cpp  render.h  resource.qrc  settings.cpp  settings.h
src/boomaga/cmake/: CreateDesktopFile.cmake  FindPoppler.cmake
src/boomaga/gui/: icon.cpp  icon.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/boomaga/gui/aboutdialog/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui
src/boomaga/gui/configdialog/: configdialog.cpp  configdialog.h  configdialog.ui
src/boomaga/gui/export/: exporttopdf.cpp  exporttopdf.h  exporttopdf.ui
src/boomaga/gui/printdialog/: printdialog.cpp
src/boomaga/gui/printersettings/: printersettings.cpp  printersettings.ui
src/boomaga/gui/widgets/: joblistview.cpp  joblistview.h  pagelistview.cpp  previewwidget.cpp  previewwidget.h  printerscombobox.cpp  subbookletview.cpp  subbookletview.h
src/boomaga/iofiles/: boofile.cpp  boofile.h  cupsboofile.cpp  cupsboofile.h  infile.cpp  infile.h  pdffile.cpp  pdffile.h  postscriptfile.cpp  postscriptfile.h
src/boomaga/kernel/: boofile.cpp  boofile.h  fileloader.cpp  fileloader.h  inputfile.h  job.cpp  job.h  layout.cpp  layout.h  pdfprocessor.cpp  pdfprocessor.h  printer.cpp  printer.h  project.cpp  project.h  projectfile.cpp  projectpage.cpp  projectpage.h  pstopdf.cpp  pstopdf.h  sheet.cpp  sheet.h  tmppdffile.cpp  tmppdffile.h
src/boomaga/misc/: Info.plist.in  boomaga.desktop.in
src/boomaga/misc/images/: icons.qrc  icons2png.sh  mainicon.qrc
src/boomaga/pdfmerger/: pdfmerger.h  pdfmergeripc.cpp  pdfprocessor.cpp  pdfprocessor.h
src/boomaga/pdfparser/: pdferrors.h  pdfreader.cpp  pdfreader.h  pdfvalue.h  pdfwriter.cpp  pdfwriter.h  pdfxref.cpp  pdfxref.h
src/boomaga/tests/: CMakeLists.txt  test_infiles.cpp  testboomaga.cpp  testboomaga.h  testpdfreader.cpp
src/boomaga/translations/: boomaga_cs.ts  boomaga_de.ts  boomaga_el.ts  boomaga_eu.desktop  boomaga_eu.ts  boomaga_fr.ts  boomaga_hu_HU.ts  boomaga_it.desktop  boomaga_it.ts  boomaga_lt.ts  boomaga_nb_NO.ts  boomaga_nl_NL.ts  boomaga_pl_PL.ts  boomaga_ro.desktop  boomaga_ro.ts  boomaga_ru.desktop  boomaga_ru.ts  boomaga_sv.desktop  boomaga_sv.ts  boomaga_uk_UA.ts  boomaga_uz@Latn.desktop  boomaga_uz@Latn.ts  src.boomaga.ts
src/boomaga/translations/translatorsinfo/: translators_eu.info  (+3 more)
src/boomaga/updater/: CMakeLists.txt  updater.h  updater.mm
(+108 files in other folders)
